--- a/shoptiensinhnhat/package.json
+++ b/shoptiensinhnhat/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
+    "spinners-angular": "^0.0.5",
     "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
